client/src/index.css
@font-face {
    font-family: 'Gotham Rounded Book';
    src: url('./assets/fonts/GothamRounded-Book.eot');
    src: url('./assets/fonts/GothamRounded-Book.eot?#iefix') format('embedded-opentype'),
    url('./assets/fonts/GothamRounded-Book.woff2') format('woff2'),
    url('./assets/fonts/GothamRounded-Book.woff') format('woff'),
    url('./assets/fonts/GothamRounded-Book.svg#GothamRounded-Book') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Gotham Rounded';
    src: url('./assets/fonts/GothamRounded-Medium.eot');
    src: url('./assets/fonts/GothamRounded-Medium.eot?#iefix') format('embedded-opentype'),
    url('./assets/fonts/GothamRounded-Medium.woff2') format('woff2'),
    url('./assets/fonts/GothamRounded-Medium.woff') format('woff'),
    url('./assets/fonts/GothamRounded-Medium.svg#GothamRounded-Medium') format('svg');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'Gotham Rounded';
    src: url('./assets/fonts/GothamRounded-Light.eot');
    src: url('./assets/fonts/GothamRounded-Light.eot?#iefix') format('embedded-opentype'),
    url('./assets/fonts/GothamRounded-Light.woff2') format('woff2'),
    url('./assets/fonts/GothamRounded-Light.woff') format('woff'),
    url('./assets/fonts/GothamRounded-Light.svg#GothamRounded-Light') format('svg');
    font-weight: 300;
    font-style: normal;
}

@media (min-width: 576px) {
    .card-deck .card {
        margin-left: 0;
        padding: 1em;
    }

    .card-deck {
        margin-left: 0;
        margin-right: 0;
    }
}

body, html {
    background-color: #FEFEFE;
    margin: 0;
    padding: 0;
    font-family: 'Gotham Rounded', sans-serif;
    font-size: 1.1rem;
}

h1 {
    font-weight: 600;
}

input {
    border-radius: 0;
}

.btn-info {
    border-color: unset;
    border-radius: 0;
}

.btn-info.disabled, .btn-info:disabled {
    border-color: unset !important;
    background-color: #00b9ff !important;
}

.bg-primary {
    background-color: #00b9ff !important;
}

.card {
    border: none;
    border-radius: .5em;
    background-color: #f4f7f6;
}

.card-body {
    padding: 1.6em 0 1em .3em;
}

.card-img-top {
    width: 100%;
    height: 16vw;
    object-fit: cover;
}

.card-ing-top img {
    max-width: 100%;
    max-height: 100%;
    display: inline-block; /* Instead of display: block; */
    margin: 0 auto;
    vertical-align: middle;
}

.card-title {
    margin: 0;
}

.col-sm-10 {
    max-width: 100%;
}

.col-form-label-lg {
    padding-bottom: .7em;
}

.configure-pane {
    margin: 3.5em;
}

.configure-pane h2 {
    font-weight: 600;
    margin-bottom: 2em;
}

.configure-pane > .table-responsive thead th {
    font-size: 1.2em;
    font-weight: inherit;
}

.configure-pane > .table-responsive td {
    padding: 0 1em 1em 0;
}

.filepond--drop-label label {
    font-family: 'Gotham Rounded Book', sans-serif;
}

.form-control:focus {
    border-color: #DBE0DF;
    -webkit-box-shadow: unset;
    box-shadow: unset;
}

.form-control-lg {
    border-radius: 0;
}

.h1, .h2, .h3 {
    font-weight: 600;
}

.inverse {
    color: #fff;
}

.listgroup-users {
    margin: 1em 0 1em 0;
}

.listgroup-users > .card-body {
    padding: 1em 0 1em 0;
}

.listgroup-users > .card-body ul {
    list-style: none;
    padding-left: 0;
}

.main-container {
    margin: 0 5em 0 5em;
    padding: 3em 0 0 0;
}

.main-container__lightboard {
    margin: 0 5em 0 5em;
    padding: 3em 0 3em 0;
}

.main-container__lightboard h1 {
    font-weight: 600;
    margin: 3em 0 2em 0;
}

.margin-bottom {
    margin: 0 0 2em 0;
}

.margin-bottom__thin {
    margin: 0 0 1.2em 0;
}

.margin-top {
    margin: 2em 0 0 0;
}

.margin-top .col-sm-1 {
    padding-left: 0;
    padding-right: 0;
}

.navbar {
    padding: 0 2em 0 0;
    border-bottom: 1px solid rgba(0, 0, 0, .125);
}

.navbar-light .navbar-brand {
    background-color: #00b9ff;
    color: #fff;
    padding: 1.3em;
}

.navbar-light {
    background-color: #FEFEFE;
    color: rgba(0, 0, 0, .5) !important;
}

.padding-top {
    margin: 6em;
}

.sign-in-box {
    margin: 2em 0 0 0;
}

.sign-in-box .btn-info {
    background-color: #355263;
}

.sign-in-box h4 {
    margin: 1em 0 1.3em 0;
    text-align: center;
}

.sign-in__errors {
    padding: 0 15px 0 15px;
}

.sign-in__errors_form-group {
    margin-bottom: 0;
}

.sign-in__logo {
    margin: 4em 2em 1.5em 2em;
}

.slide-pane_from_bottom {
    background-color: #fff;
}

.slide-pane__close {
    transform: rotate(270deg)
}

.slide-pane__overlay.ReactModal__Overlay--after-open {
    z-index: 9999;
}

.slide-pane .slide-pane__title {
    font-size: 1.1em;
}

.speaker-deck__header {
    font-weight: 600;
    margin: 2.5em 0 1em 0;
}

.speaker-photo {
    width: 300px;
    height: 300px;
    background-color: #CCCCCC;
    display: inline-block;
    float: left;
    position: relative;
}

.speaker-photo img {
    max-width: 100%;
    max-height: 100%;
    display: inline-block; /* Instead of display: block; */
    margin: 0 auto;
    vertical-align: middle;
}

.user-list__active-users {
    margin: 1.4em 0 0 0;
}

.user-list__active-users th, td {
    font-family: 'Gotham Rounded', sans-serif;
}

.user-sign-in--dashboard-link {
    font-size: 1.2em;
    padding-left: 15px;
    color: #355263;
}

.user-sign-in--dashboard-link:hover {
    padding-left: 15px;
    color: #517594
}

.table td, .table th {
    padding: .5em 0 .5em 0;
}

.text-input {
    font-family: 'Gotham Rounded', sans-serif;
    height: 3.2em;
}

text-input:focus {
    outline: none;
}

.text-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #DBE0DF;
    opacity: 1; /* Firefox */
}

.text-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #DBE0DF;
}

.text-input::-ms-input-placeholder { /* Microsoft Edge */
    color: #DBE0DF;
}

